--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,6 +54,8 @@
 <link rel="apple-touch-icon" href="{{ 'apple-touch-icon.png' | relative_url }}">
 <!-- Place favicon.ico in the root directory -->
 
+<link rel="stylesheet" href="{{'/assets/style.css'}}">
+
 {% comment %}
 The links below are only here because we want to use the `href` property in JS (see `_js/src/katex.js`).
 We want to avoid building the URL dynamically in JS, because it depends on your `baseurl` and CDN optimizers can't find and modify it there.
