--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,8 @@ layout: base
 
 {% include post.html post=page link_title=false %}
 
-{% include about.html %}
+<!-- {% include about.html %} -->
+
+{% include ads.html %}
 
 {% include related.html post=page %}
