--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,6 +2,10 @@
   <div id="_sidebar" class="sidebar">
     <div class="sidebar-bg" style="background-color:{{ color }};background-image:url({{ image }})"></div>
     <header class="sidebar-sticky" role="banner">
+      
+      <div class="sidebar-about">
+          {% include srcset-img.html class="me" style="float:default" img=site.author.picture alt=include.author.name %}
+      </div>
       <div class="sidebar-about">
         <h1><a id="_title" href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
         {{ site.description | truncatewords:50 | markdownify }}
