--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
     <header class="sidebar-sticky" role="banner">
       
       <div class="sidebar-about">
-          {% include srcset-img.html class="me" style="float:default" img=site.author.picture alt=include.author.name %}
+          {% include srcset-img.html class="me" img=site.author.picture alt=include.author.name %}
       </div>
       <div class="sidebar-about">
         <h1><a id="_title" href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
