--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,8 +9,10 @@
   {% assign pages = pages | where: "menu", true | sort: "order" %}
 
   {% for node in pages %}
+    {% if node.tile != 'Hide' and node.tile != 'Hidejack' %}
     <li>
       <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url | relative_url }}">{{ node.title }}</a>
     </li>
+    {% endif %}
   {% endfor %}
 </ul>
