--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,10 +9,10 @@
   {% assign pages = pages | where: "menu", true | sort: "order" %}
 
   {% for node in pages %}
-    {% if node.tile != 'Hyde' and node.tile != 'Hydejack' %}
+    <!-- {% if node.tile != 'Hyde' and node.tile != 'Hydejack' %} -->
     <li>
       <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url | relative_url }}">{{ node.title }}</a>
     </li>
-    {% endif %}
+    <!-- {% endif %} -->
   {% endfor %}
 </ul>
