--- a/_includes/body.html
+++ b/_includes/body.html
@@ -7,6 +7,20 @@
     <a id="_menu" class="menu no-hover" href="#_title">
       <span class="sr-only">Menu</span>
     </a>
+    <div>
+        <script>
+          (function() {
+            var cx = '016502615542554915808:jiwhrzbks3u';
+            var gcse = document.createElement('script');
+            gcse.type = 'text/javascript';
+            gcse.async = true;
+            gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(gcse, s);
+          })();
+        </script>
+        <gcse:searchbox-only></gcse:searchbox-only>
+    </div>
   </div>
 </div>
 
