--- a/_includes/body.html
+++ b/_includes/body.html
@@ -7,19 +7,37 @@
     <a id="_menu" class="menu no-hover" href="#_title">
       <span class="sr-only">Menu</span>
     </a>
-    <div>
-        <script>
-          (function() {
-            var cx = '016502615542554915808:jiwhrzbks3u';
-            var gcse = document.createElement('script');
-            gcse.type = 'text/javascript';
-            gcse.async = true;
-            gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(gcse, s);
-          })();
-        </script>
-        <gcse:searchbox-only></gcse:searchbox-only>
+
+    <div class="search">
+        <div style="">
+            <script>
+              function srchgkeye(e){
+                console.log(e.keyCode);
+                if (e.keyCode == 13){
+                  srchg();
+                  return false;
+                }
+              }
+              function srchg(){
+                var txtx=document.querySelector('#serachGoogleInput').value;
+                window.open('https://cse.google.com/cse?cx=016502615542554915808:jiwhrzbks3u&q=' + encodeURI(txtx));
+                //document.querySelector('input.gsc-search-button').click();
+              }
+            //   (function() {
+            //     var cx = '016502615542554915808:jiwhrzbks3u';
+            //     var gcse = document.createElement('script');
+            //     gcse.type = 'text/javascript';
+            //     gcse.async = true;
+            //     gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+            //     var s = document.getElementsByTagName('script')[0];
+            //     s.parentNode.insertBefore(gcse, s);
+            //   })();
+            </script>
+            <!-- <gcse:searchbox-only></gcse:searchbox-only> -->
+        </div>
+        <div>
+            <input id="serachGoogleInput" type="text" onkeyup="srchgkeye()" /><button onclick="srchg()">Search</button>
+        </div>
     </div>
   </div>
 </div>
