--- a/_includes/body.html
+++ b/_includes/body.html
@@ -25,10 +25,9 @@
               }
            
             </script>
-            <!-- <gcse:searchbox-only></gcse:searchbox-only> -->
         </div>
         <div>
-            <input id="serachGoogleInput" type="text" onkeyup="srchgkeye()" /><button onclick="srchg()">Search</button>
+            <input id="serachGoogleInput" type="text" onkeyup="srchgkeye(event)" /><button onclick="srchg()">Search</button>
         </div>
     </div>
   </div>
