set link_title to true

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-{% include post.html post=page link_title=false %}
+{% include post.html post=page link_title=true %}
 
 <!-- {% include about.html %} -->
 
