--- a/_includes/post.html
+++ b/_includes/post.html
@@ -10,7 +10,7 @@
 
     <p class="post-date heading">
       <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%d %b %Y" }}</time>
-      {% include tag-list.html tags=post.categories meta=site.featured_categories start_with="in " separator=" / " %}
+      {% include tag-list.html is_category=true tags=post.categories meta=site.featured_categories start_with="in " separator=" / " %}
       {% include tag-list.html tags=post.tags meta=site.featured_tags start_with="on " separator=", " %}
     </p>
 
