--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,18 @@
 <footer>
+    
+
   <hr/>
+
+  <p>
+    <!-- add busuanzi service -->
+    Total
+    <span style="color: cornflowerblue" id="busuanzi_value_site_pv"></span> views.
+  </p>
+
   {% if site.copyright.size > 0 %}
     {{ site.copyright | markdownify }}
   {% endif %}
+
   <p>
     <code>Powered by <a href="https://qwtel.com/hydejack/">Hydejack</a> v<span id="_version">6.6.1</span></code>
   </p>
