--- a/_includes/my-scripts.html
+++ b/_includes/my-scripts.html
@@ -1,3 +1,5 @@
+<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js">
+</script>
 {% comment %}
 <script>
   document.getElementById('_yPushState').addEventListener('y-push-state-load', function() {
