--- a/_includes/post.html
+++ b/_includes/post.html
@@ -14,7 +14,7 @@
       {% include tag-list.html tags=post.tags meta=site.featured_tags start_with="on " separator=", " %}
     
       <!-- busuanzi code. page view count -->
-      <script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+      <!-- add busuanzi service -->
       <span id="busuanzi_container_site_pv"> - Hits(<span style="color: cornflowerblue" id="busuanzi_value_page_pv"></span>)</span>
     </p>
 
