do not show hits when in index

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -13,9 +13,11 @@
       {% include tag-list.html is_category=true tags=post.categories meta=site.featured_categories start_with="in " separator=" / " %}
       {% include tag-list.html tags=post.tags meta=site.featured_tags start_with="on " separator=", " %}
     
+      {% unless include.excerpt %}
       <!-- busuanzi code. page view count -->
       <!-- add busuanzi service -->
       <span id="busuanzi_container_site_pv"> - Hits(<span style="color: cornflowerblue" id="busuanzi_value_page_pv"></span>)</span>
+      {% endunless %}
     </p>
 
     {% include message.html text=post.description %}
