--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -14,11 +14,11 @@ published: true
   {% assign tags_list = site.tags %}  
   {% if tags_list.first[0] == null %}
     {% for tag in tags_list %} 
-      <li><a href="{{BASE_PATH}}/tags#{{ tag }}-ref">{{ tag }} <span>{{ site.tags[tag].size }}</span></a></li>
+      <li><a href="#{{ tag }}-ref">{{ tag }} <span>{{ site.tags[tag].size }}</span></a></li>
     {% endfor %}
   {% else %}
     {% for tag in tags_list %} 
-      <li><a href="{{BASE_PATH}}/tags#{{ tag[0] }}-ref">{{ tag[0] }} <span>{{ tag[1].size }}</span></a></li>
+      <li><a href="#{{ tag[0] }}-ref">{{ tag[0] }} <span>{{ tag[1].size }}</span></a></li>
     {% endfor %}
   {% endif %}
   {% assign tags_list = nil %}
