add wechat qrcode

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,6 +22,10 @@
           {% include social.html social=author.social %}
         </div>
       {% endif %}
+
+      <div class="sidebar-about">
+          <img src="https://www.zhouexin.com/qrcode.jpg" alt="周e信"></img>
+      </div>
     </header>
   </div>
 </div>
