二维码链接

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,7 +24,7 @@
       {% endif %}
 
       <div class="sidebar-about">
-          <img src="https://www.zhouexin.com/qrcode.jpg" alt="周e信"></img>
+          <a href="https://www.zhouexin.com"><img src="https://www.zhouexin.com/qrcode.jpg" alt="周e信"></img></a>
       </div>
     </header>
   </div>
