--- a/_includes/ads.html
+++ b/_includes/ads.html
@@ -1,13 +1,6 @@
-<div
-  style="text-align: center; "
-  class="kazge-after-content"
-  id="kazge-677219085"
->
+<div style="text-align: center; " class="kazge-after-content" id="kazge-677219085">
   <p>
-    <a
-      href="https://apps.apple.com/us/app/aero-egg/id1247264387?ls=1"
-      target="_blank"
-      ><br />
+    <a href="{{ site.baseurl }}/show/volitantegg/飞翔的鸡蛋.apk" target="_blank"><br />
       <img src="{{ site.baseurl }}/assets/volitantegg-show.gif" alt="" /><br />
     </a>
   </p>
